# CPP_Lecture_Project

./: README.md
Project1/: main.cpp  mul.cpp  mul.h
Project2/: CMakeLists.txt  main.cpp  parser.cpp  parser.h
Project2/ast/: ast.cpp  ast.h  test.cpp
Project2/complexobject/: complexObject.cpp  complexObject.h  tst.cpp
Project2/complexobject/math/: mul.cpp  mul.h
Project3/: TextQuery.cpp  TextQuery.h  colors.h  file.h  formatter.h  lexer.h  main.cpp  misc.h  news.txt  query.cpp  query.h  repl.h  res.txt  searchResult.cpp  searchResult.h  test.txt
